<resources>
    <!--android_manifest-->
    <string name="app_name">MvApp2SD</string>
    <string name="title_settings">Settings</string>
    <string name="title_appinfo">Application Details</string>

    <!--my_listitem-->
    <string name="label_app">"Lable: "</string>
    <string name="label_pkg">"Package: "</string>

    <!--menu_main-->
    <string name="action_refresh">Refresh</string>
    <string name="action_select">Select…</string>
    <string name="action_select_cancel">Cancel</string>
    <string name="action_link">Move to SD</string>
    <string name="action_settings">Settings…</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>

    <!--activity_settings-->
    <string name="set_showsys">Show System Apps(Not Recommended)</string>
    <string name="label_link">Link Options</string>
    <string name="set_linkdata">Link /data/data</string>
    <string name="set_linkcache">Link /data/dalvik-cache</string>

    <!--activity_appinfo-->
    <string name="label_size">Storage</string>
    <string name="label_size_total">Total</string>
    <string name="label_size_package">Package</string>
    <string name="label_size_data">Data</string>
    <string name="label_size_dalvik">Dalvik Cache</string>
</resources>
