<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".Activity_Settings">
    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:id="@+id/set_showsys"
        android:text="@string/set_showsys"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:focusable="true"
        android:clickable="true"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider"/>
    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:id="@+id/set_linkdata"
        android:text="@string/set_linkdata"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:focusable="true"
        android:clickable="true"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider"/>
    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:id="@+id/set_linkcache"
        android:text="@string/set_linkcache"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:focusable="true"
        android:clickable="true"/>
</LinearLayout>